// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./no-Image.jpg"
  />
</div>
`;

exports[`ProductImage Debe mostrar el componente con la imagen personalizado 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://via.placeholder.com/150"
/>
`;
